changed wording of tip amount

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Number of People: <input type="number" min="0" ng-model="people">
       </div>
       <div>
-        Tip Percentage: <input type="number" min="0" ng-model="tip" step="0.05">
+        Tip: <input type="number" min="0" ng-model="tip" step="0.05">
       </div>
       <br>
       <div>
